<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="120dp" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="2">
      
      <TextView
          android:id="@+id/tv_from"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/from"
          android:textSize="18sp"
          android:textAlignment="center"
          android:layout_margin="12dp"/>
      <TextView
          android:id="@+id/tv_to"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/to"
          android:textSize="18sp"
          android:textAlignment="center"
          android:layout_margin="12dp"/>
      
</LinearLayout>
    <EditText
    android:id="@+id/edt_amount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_amount"
    android:layout_margin="12dp"
    android:textAlignment="center"

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">
    <Button
     android:id="@+id/btnusd"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/usd"
     android:backgroundTint="@android:color/darker_gray"
     android:layout_weight="1"
     android:layout_marginStart="12dp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/btngbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gbp"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/btnuer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        style="?android:attr/buttonBarButtonStyle" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/btnaus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aus"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btncan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnjpy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jpv"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            style="?android:attr/buttonBarButtonStyle" />



</LinearLayout>
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_margin="10dp"/>



    </LinearLayout>


